k8s/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kk-payments
  labels:
    app: kk-payments
spec:
  replicas: 2
  revisionHistoryLimit: 5
  selector:
    matchLabels:
      app: kk-payments
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: kk-payments
    spec:
      containers:
        - name: kk-payments
          image: kijanikiosk/kk-payments:1.1.0
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 3001
          readinessProbe:
            httpGet:
              path: /health
              port: http
            initialDelaySeconds: 5
            periodSeconds: 10
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /health
              port: http
            initialDelaySeconds: 15
            periodSeconds: 20
            failureThreshold: 3
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 256Mi
